@@ -1,3 +1,3 @@
 module LookUpTable
-  VERSION = "0.1.0.rc3"
+  VERSION = "0.1.0.rc4"
 end
